--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -41,4 +41,21 @@
     <dimen name="bottom_ellipsis_height">4dp</dimen>
     <dimen name="post_image_height">250dp</dimen>
     <dimen name="empty_nav_view_height">25dp</dimen>
+
+    <dimen name="image_width">96dp</dimen>
+    <dimen name="image_height">96dp</dimen>
+
+    <dimen name="margin_small">5dp</dimen>
+    <dimen name="margin_normal">10dp</dimen>
+    <dimen name="margin_medium">15dp</dimen>
+    <dimen name="margin_large">20dp</dimen>
+    <dimen name="margin_xlarge">25dp</dimen>
+
+    <dimen name="padding_small">5dp</dimen>
+    <dimen name="padding_normal">10dp</dimen>
+    <dimen name="padding_medium">15dp</dimen>
+    <dimen name="padding_large">20dp</dimen>
+    <dimen name="padding_xlarge">25dp</dimen>
+    <dimen name="padding_xxlarge">40dp</dimen>
+
 </resources>
